--- a/vite-project/src/styles/search.css
+++ b/vite-project/src/styles/search.css
@@ -1,36 +1,35 @@
 
-/* div {padding: 30px 0} */
-form {
+.search form {
   position: relative;
   width: 300px;
   margin: 0 auto;
 }
-
-.d1 {background: #A3D0C3;
-position:relative}
-.d1 input {
+.search {
+  position: relative;
+}
+.search input {
   width: 100%;
   height: 42px;
-  padding-left: 10px;
-  border: 2px solid #7BA7AB;
-  border-radius: 5px;
+  padding-left: 20px;
+  border: 2px solid #7ba7ab;
+  border-radius: 20px;
   outline: none;
-  background: #F9F0DA;
-  color: #9E9C9C;
+  background: #f9f0da;
+  color: black;
+  font-size: 16px;
 }
-.d1 button {
-  position: absolute; 
-  top: 0;
-  right: 0px;
-  width: 42px;
+.search button {
+  position: absolute;
+  top: 2px;
+  right: 0;
+  width: 48px;
   height: 42px;
   border: none;
-  background: #7BA7AB;
-  border-radius: 0 5px 5px 0;
   cursor: pointer;
-  content: "\1F50E";
+  outline: none;
+  background: #f9f0da;
 }
-.d1 button:before {
-  content: "\1F50E";
- 
+.search button:before {
+  content: '\1F50E';
 }
+
