--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,10 +11,10 @@
 }
 .header-info {
   position: absolute;
-  left: 50px;
+  left: 20px;
   top: 15px;
-  color: wheat;
-  font-size: 20px;
+  color: rgb(245, 161, 5);
+  font-size: 16px;
 }
 li {
   list-style-type: none;
