--- a/src/styles/add-card.css
+++ b/src/styles/add-card.css
@@ -2,3 +2,14 @@
     display: flex;
     flex-direction: column;
 }
+.fieldset{
+    background-color: rgb(184, 228, 228);
+    border-radius: 5px;
+    
+   
+}
+.legend{
+    background-color: white;
+ 
+    
+}
