--- a/src/styles/add-card.css
+++ b/src/styles/add-card.css
@@ -1,15 +1,12 @@
-.addcard{
-    display: flex;
-    flex-direction: column;
+.addcard {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
 }
-.fieldset{
-    background-color: rgb(184, 228, 228);
-    border-radius: 5px;
-    
-   
+.fieldset {
+  background-color: rgb(184, 228, 228);
+  border-radius: 5px;
 }
-.legend{
-    background-color: white;
- 
-    
+.legend {
+  background-color: white;
 }
