--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -26,7 +26,7 @@
   justify-content: center;
   overflow: hidden;
 }
-.card-date{
+.card-date {
   position: absolute;
   bottom: 10px;
   right: 5px;
@@ -66,3 +66,18 @@
   height: 200px;
   transition: 0.5s;
 }
+.foot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  overflow: hidden;
+  position: absolute;
+  top: 10px;
+  color: white;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+
+} 
