feat: add inputs on form

--- a/src/styles/add-card.css
+++ b/src/styles/add-card.css
@@ -19,10 +19,12 @@
   margin-top: 15px;
   border-radius: 5px;
   cursor: pointer;
- border: none;
-  
+  border: none;
 }
 .btn:hover {
   background-color: rgb(10, 167, 10);
- 
+}
+.error {
+  height: 20;
+  color: red;
 }
