--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -79,9 +79,8 @@
   width: 20px;
   height: 20px;
   background-color: black;
-
-} 
-.card-gender{
+}
+.card-gender {
   display: flex;
   justify-content: center;
   position: absolute;
@@ -94,5 +93,22 @@
   overflow: hidden;
   border: 2px solid white;
   border-radius: 10px;
-  color:white;
+  color: white;
+}
+.modal {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(128, 128, 128, 0.5);
+}
+.modal-content {
+  width: 300px;
+  height: 300px;
+  background-color: blueviolet;
 }
