--- a/src/styles/morti-info.css
+++ b/src/styles/morti-info.css
@@ -59,8 +59,20 @@
   transition: 0.5s;
 }
 .info-item {
-    font-weight: 900;
+  font-weight: 900;
 }
-.info-category{
-    color: brown;
+.info-category {
+  color: brown;
+}
+
+@media (max-width: 850px) {
+  .info-card {
+    flex-direction: column;
+    width: 350px;
+    height: 550px;
+  }
+  .info-profile{
+    width: 300px;
+    height: 300px;
+  }
 }
