--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -107,12 +107,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+ 
+}
+.fone {
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 25;
+  width: 100%;
+  height: 100%;
   background-color: rgb(128, 128, 128, 0.7);
 }
 .modal-content {
   width: 300px;
   height: 300px;
   background-color: blueviolet;
+ 
 }
 .preview-frame {
   position: relative;
