--- a/src/styles/morti-info.css
+++ b/src/styles/morti-info.css
@@ -1,4 +1,5 @@
 .info-card {
+  z-index: 50;
   width: 700px;
   height: 400px;
   background-color: rgb(228, 107, 8);
@@ -7,8 +8,9 @@
 
   justify-content: space-around;
   align-items: center;
-  cursor: pointer;
+
   border-radius: 10px;
+  position: relative;
 }
 .info-photo-block {
   display: flex;
@@ -64,6 +66,24 @@
 .info-category {
   color: brown;
 }
+.btn-close {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: red;
+  border-radius: 15px;
+  border: 1px solid white;
+  cursor: pointer;
+}
+.btn-close:hover{
+  background-color: rgb(162, 10, 10);
+}
 
 @media (max-width: 850px) {
   .info-card {
@@ -71,7 +91,7 @@
     width: 350px;
     height: 550px;
   }
-  .info-profile{
+  .info-profile {
     width: 300px;
     height: 300px;
   }
