--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,9 @@
 .main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-top: 50px;
- 
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 700px) {
   .main {
